# cppproject

./: CMakeLists.txt  README.md
src/: AudioRenderer.cpp  AudioRenderer.h  Candy.cpp  Candy.h  CandyCreator.cpp  CandyCreator.h  CandyRemover.cpp  CandyRemover.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  InputHandler.cpp  InputHandler.h  MatchFinder.cpp  MatchFinder.h  Renderer.cpp  Renderer.h  Score.cpp  Score.h  main.cpp
